<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="SingleCarrierMode" Id="{932b8545-d89d-46a8-8a71-7d229764fd43}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM SingleCarrierMode
VAR
	(*key Command*)
	btn_Power:BOOL;
	btn_PowerOn: BOOL;
	btn_PowerOff: BOOL;
	TopPositionNew:LREAL:=100;
	TopVelocityNew:LREAL:=1;
	btn_TopMove:BOOL;
	btn_TopStop:BOOL;
	BottomPositionNew:LREAL:=100;
	BottomVelocityNew:LREAL:=1;
	btn_BottomMove:BOOL;
	btn_BottomStop:BOOL;
	(*Var*)
	fb_ton1:TON;
	fb_ton2:TON;
	fb_ton3:TON;
	(*Status*)
	State:DINT;
	Busy:BOOL;
	TopBusy:BOOL;
	BottomBusy:BOOL;
	InitDone:BOOL;
	tm_state: DINT;
	ts_state: DINT;
	bm_state: DINT;
	bs_state: DINT;
	moni_State:DINT;
	(*PowerOff*)
	d_state: DINT;
	(*¼ì²âµ½ÏÞÎ»£¬»Ö¸´Move×´Ì¬*)
	FTrig_ReachLS: F_TRIG;
	FTrig_btn_GapMove: F_TRIG;
	InitPowerDone:BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[TopPositionActual:=(Pos_LeftTopLin+Pos_RightTopLin)/2;
TopVelocityActual:=(Velo_LeftTopLin+Velo_RightTopLin)/2;
BottomPositionActual:=(Pos_LeftBottomLin+Pos_RightBOttomLin)/2;
BottomVelocityActual:=(Velo_LeftBottomLin+Velo_RightBOttomLin)/2;
(*btn_Power On/Off*)
IF btn_Power AND st_Power=0 THEN
	btn_PowerOn:=TRUE;
	btn_Power:=FALSE;
END_IF
IF btn_Power AND st_Power=1 THEN
	btn_PowerOff:=TRUE;
	btn_Power:=FALSE;
END_IF
IF btn_PowerOn THEN
	A_PowerOn();
END_IF
IF btn_PowerOff THEN
	A_PowerOff();
END_IF

(*********************************************************************Monitor All Carrirt Position***********************************************)
A_MonitoringAllAxis();
(*********************************************************************btn_TopMove*****************************************************************)
IF btn_TopMove AND NOT bottomBusy THEN
		TopBusy:=TRUE;
		btn_BottomMove:=FALSE;
		CASE tm_state OF
			0:
				FB_Move.Mode:=2;						(*单梁模式*)
				FB_Move.CoupleState:=st_Couple;			
				FB_Move.PowerState:=st_Power;			
				FB_Move.TopMove:=TRUE;				
				FB_Move.TopPosition:=TopPositionNew;		
				FB_Move.TopVelocity:=TopVelocityNew;		
				FB_Move();								
				tm_state:=1;
			1:
				FB_Move();
				LED_Run:=TRUE;
				IF NOT FB_Move.TopDone THEN	
					tm_state:=1;
				ELSE					
					tm_state:=88;
				END_IF
			88:
				btn_TopMove:=FALSE;	
				LED_Run:=FALSE;
				tm_state:=0;
				TopBusy:=FALSE;
		END_CASE
END_IF

(*********************************************************************btn_BottomMove*****************************************************************)
IF btn_BottomMove AND NOT TopBusy THEN
		btn_TopMove:=FALSE;
		BottomBusy:=TRUE;
		CASE bm_state OF
			0:
				FB_Move.Mode:=2;						
				FB_Move.CoupleState:=st_Couple;			
				FB_Move.PowerState:=st_Power;			
				FB_Move.BottomMove:=TRUE;			
				FB_Move.BottomPosition:=BottomPositionNew;		
				FB_Move.BottomVelocity:=BottomVelocityNew;		
				FB_Move();
				bm_state:=1;
			1:
				FB_Move();
				IF NOT FB_Move.BottomDone THEN
					LED_Run:=TRUE;
					bm_state:=1;
				ELSE
					bm_state:=88;
				END_IF
			88:
				BottomBusy:=FALSE;
				btn_TopMove:=FALSE;
				btn_BottomMove:=FALSE;
				bm_state:=0;
				LED_Run:=FALSE;
		END_CASE
END_IF
(*******************************************************************btn_TopStop********************************************************************)

IF btn_TopStop THEN
	LED_Run:=FALSE;
	TopMoveIndicator:=0;
	FB_Move.TopReset:=TRUE;
	TopBusy:=FALSE;
	FB_Move();
	btn_TopMove:=FALSE;	
	tm_state:=0;
	CASE ts_state OF
			0:
				FB_Stop.Mode:=2;
				FB_Stop.CoupleState:=st_Couple;
				FB_Stop.PowerState:=st_Power;
				FB_Stop.TopStop:=TRUE;	
				FB_Stop();	
				ts_state:=1;
			1:
				FB_Stop();
				IF NOT FB_Stop.TopDone THEN
					ts_state:=1;
				ELSE
					ts_state:=88;
				END_IF
			88:
				btn_TopStop:=FALSE;	
				FB_Move.TopReset:=FALSE;	
				ts_state:=0;
		END_CASE
END_IF
(*******************************************************************btn_BottomStop********************************************************************)
IF btn_BottomStop  THEN
	LED_Run:=FALSE;
	BottomMoveIndicator:=0;
	FB_Move.BottomReset:=TRUE;
	BottomBusy:=FALSE;
	FB_Move();			
	btn_BottomMove:=FALSE;			
	bm_state:=0;							
	CASE bs_state OF
			0:
				FB_Stop.Mode:=2;							
				FB_Stop.CoupleState:=st_Couple;			
				FB_Stop.PowerState:=st_Power;			
				FB_Stop.BottomStop:=TRUE;				
				FB_Stop();								
				bs_state:=1;
			1:
				FB_Stop();
				IF NOT FB_Stop.BottomDone THEN		
					bs_state:=1;
				ELSE									
					bs_state:=88;
				END_IF
			88:
				btn_BottomStop:=FALSE;					
				FB_Move.BottomReset:=FALSE;				
				bs_state:=0;
		END_CASE
END_IF
(*********************************************************************ÏÞÎ»Åö´¥×´Ì¬»Ö¸´************************************************************)

(*Èç¹û¼ì²âµ½ÏØÏÞÎ»¿ª¹ØÏÂ½µÑØ£¬»Ö¸´Move×´Ì¬*)
FTrig_ReachLS(CLK:=Unreach_LS_Top AND Unreach_LS_Bottom);
IF FTrig_ReachLS.Q THEN		(*FTrig_ReachLS.QÌ«¿ì£¬Ö»ÄÜÊ¹btn_TopStopÎªTRUE*)
	btn_TopStop:=TRUE;
	btn_BottomStop:=TRUE;
END_IF
IF btn_TopStop THEN			(*Òò´Ë£¬´Ë´¦Îªµ±Ö®Ç°btn_TopStopÎªTRUEÊ±£¬ÈËÎªÈÃbtn_BottomStopÎªTRUE*)
	btn_BottomStop:=TRUE;
END_IF
(*
(*Èç¹û¼ì²âµ½TopÏÞÎ»¿ª¹ØFALSE£¬ÇÒÄ¿±êÎ»ÖÃ´óÓÚµ±Ç°Î»ÖÃÊ±£¬»òÕßÏà·´Ê±£¬»Ö¸´Move×´Ì¬*)
IF NOT Unreach_LS_Top AND TopPositionNew-TopPositionActual>0.0005 AND btn_TopMove THEN
	btn_TopStop:=TRUE;
END_IF
IF NOT Unreach_LS_Bottom AND TopPositionNew-TopPositionActual<0.0005 AND btn_TopMove THEN
	btn_TopStop:=TRUE;
END_IF
IF NOT Unreach_LS_Top AND BottomPositionNew-BottomPositionActual>0.0005 AND btn_BottomMove THEN
	btn_BottomStop:=TRUE;
END_IF
IF NOT Unreach_LS_Bottom AND BottomPositionNew-BottomPositionActual<0.0005 AND btn_BottomMove THEN
	btn_BottomStop:=TRUE;
END_IF
*)]]></ST>
    </Implementation>
    <Action Name="A_MonitoringAllAxis" Id="{eb43239b-219b-4196-a91d-cc3c414c514e}">
      <Implementation>
        <ST><![CDATA[(****************************************************************
NAME:			A_MonitoringAllAxis
DATA:			2017.3.20
VERSION:		1.0.0
DESCRIPTION:	
				Ã¿´ÎÑ­»·¾ùÖ´ÐÐÖáÎ»ÖÃºÍÖáÔË¶¯µÄ¼ì²é
				1.4ÖáÏà¶ÔÔË¶¯¼ì²é
				2.4Öá¹âÕ¤³ßÎ»ÖÃ¡¢ËÙ¶È¶Ô±È¼ì²é
				3.Ã¿Öá¹âÕ¤ºÍ±àÂëÆ÷Î»ÖÃ¶Ô±È¼ì²é
HISTORY:
				2017.3.20		NEW

***************************************************************)
IF  st_Power<>0 THEN
		Diff_TopPos_actual:=Pos_leftTopLin-Pos_RightTopLin;
		Diff_TopVelo_actual:=Velo_leftTopLin-Velo_RightTopLin;
IF ABS(Pos_leftTopLin-Pos_RightTopLin)>Threshold_TopPos_SingleCarrier THEN
		btn_TopStop:=TRUE;
		btn_BottomStop:=TRUE;
		FB_PlcEmergencyStop();
		Error:=TRUE;
		ErrorID:=14;
		LED_Error:=TRUE;
ELSIF ABS(Velo_leftTopLin-Velo_RightTopLin)>Threshold_TopVelo_SingleCarrier  THEN
		(*btn_TopStop:=TRUE;
		btn_BottomStop:=TRUE;
		FB_PlcEmergencyStop();*)
		Error:=TRUE;
		ErrorID:=15;
(*Bottom Î»ÖÃºÍËÙ¶È±È¶Ô*)
ELSIF ABS(Pos_LeftBottomLin-Pos_RightBottomLin)>Threshold_BottomPos_SingleCarrier THEN
		btn_TopStop:=TRUE;
		btn_BottomStop:=TRUE;
		FB_PlcEmergencyStop();
		Error:=TRUE;
		ErrorID:=16;
		LED_Error:=TRUE;
ELSIF ABS(Velo_leftBottomLin-Velo_RightBottomLin)>Threshold_BottomVelo_SingleCarrier  THEN
		(*btn_TopStop:=TRUE;
		btn_BottomStop:=TRUE;
		FB_PlcEmergencyStop();*)
		Error:=TRUE;
		ErrorID:=17;
(*ÎÞLeftºÍRightËÙ¶ÈÎ»ÖÃµÄ¶Ô±È*)
END_IF
END_IF
(*********************************************************************************3.Ã¿Öá¹âÕ¤ºÍ±àÂëÆ÷Î»ÖÃ¶Ô±È¼ì²é**********************************************************************)]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_PowerOff" Id="{3f10ae79-5a18-4a8f-8e8f-36886ee92bba}">
      <Implementation>
        <ST><![CDATA[CASE d_state OF
		0:(*PowerOff*)
			FB_Power(Off:=TRUE);
				d_state:=1;
		1:
			IF NOT FB_power.OffStatus THEN
				d_state:=1;
			ELSE
				d_state:=88;
			END_IF
		88:(*ResetAllState*)
			btn_PowerOn:=FALSE;
			btn_TopMove:=FALSE;
			btn_TopStop:=FALSE;
			btn_BottomMove:=FALSE;
			btn_BottomStop:=FALSE;
			LeftTopLinMoveIndicator:=0;
			RightTopLinMoveIndicator:=0;
			LeftBottomLinMoveIndicator:=0;
			RightBottomLinMoveIndicator:=0;
			fb_ton1.IN:=FALSE;
			fb_ton2.IN:=FALSE;
			fb_ton3.IN:=FALSE;
			State:=0;
			Busy:=FALSE;
			InitPowerDone:=FALSE;
			Error:=FALSE;
			ErrorID:=0;
			tm_state:=0;
			ts_state:=0;
			bm_state:=0;
			bs_state:=0;
			btn_PowerOff:=FALSE;
			d_state:=0;
			Led_Run:=FALSE;
			Led_Error:=FALSE;
			moni_State:=0;
END_CASE
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_PowerOn" Id="{e5af3f24-1d66-4117-95bc-015645fa564d}">
      <Implementation>
        <ST><![CDATA[(****************************************************************
NAME:			A_PowerOn
DATA:			2018.1.9
VERSION:		1.0.0
DESCRIPTION:	
				ÉÏµãÃüÁîºó£¬Ë³ÐòÖ´ÐÐ£º
				1.FB_PowerOn
				·µ»ØÖ´ÐÐÊÇ·ñ³É¹¦
HISTORY:
				2019.1.9		NEW

***************************************************************)
fb_ton3(PT:=t#0.5s);
CASE State OF
	0:	(*FB_Power_On*)
		FB_Power(On:=TRUE);
		fb_ton3.IN:=TRUE;
		State:=1;
	1:	(*wait*)
		FB_power();
		IF NOT FB_power.OnStatus THEN		(*FB_Power_OnÃ»ÓÐÖ´ÐÐÍê£¬wait£¬³¬Ê±FB Error*)
			IF NOT fb_ton3.Q THEN
				State:=1;
			ELSE
				ErrorID:=1;
				State:=99;
			END_IF
		ELSE
			State:=88;
		END_IF
	88:	(*All Done*)
		btn_PowerOn:=FALSE;
		State:=0;
		Error:=FALSE;
		ErrorID:=0;
		Busy:=FALSE;
		InitPowerDone:=TRUE;
		FB_power.On:=FALSE;
		fb_ton3.IN:=FALSE;
		LED_Error:=FALSE;
	99:
		Error:=TRUE;
		//ErrorID:=701;
		//ErrorDescription:='power on error';		
		btn_PowerOn:=FALSE;
		State:=99;
		Busy:=FALSE;
		InitPowerDone:=FALSE;
		fb_ton3.IN:=FALSE;
		LED_Error:=TRUE;
END_CASE]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="SingleCarrierMode">
      <LineId Id="35" Count="3" />
      <LineId Id="334" Count="13" />
      <LineId Id="51" Count="0" />
      <LineId Id="350" Count="0" />
      <LineId Id="52" Count="1" />
      <LineId Id="56" Count="0" />
      <LineId Id="58" Count="11" />
      <LineId Id="77" Count="15" />
      <LineId Id="94" Count="1" />
      <LineId Id="97" Count="11" />
      <LineId Id="116" Count="16" />
      <LineId Id="134" Count="1" />
      <LineId Id="388" Count="0" />
      <LineId Id="136" Count="57" />
      <LineId Id="198" Count="0" />
      <LineId Id="389" Count="0" />
      <LineId Id="199" Count="8" />
      <LineId Id="391" Count="0" />
      <LineId Id="208" Count="12" />
      <LineId Id="390" Count="0" />
    </LineIds>
    <LineIds Name="SingleCarrierMode.A_MonitoringAllAxis">
      <LineId Id="0" Count="12" />
      <LineId Id="47" Count="0" />
      <LineId Id="49" Count="32" />
    </LineIds>
    <LineIds Name="SingleCarrierMode.A_PowerOff">
      <LineId Id="0" Count="13" />
      <LineId Id="39" Count="1" />
      <LineId Id="14" Count="9" />
      <LineId Id="25" Count="1" />
      <LineId Id="42" Count="2" />
      <LineId Id="41" Count="0" />
      <LineId Id="29" Count="4" />
      <LineId Id="35" Count="1" />
    </LineIds>
    <LineIds Name="SingleCarrierMode.A_PowerOn">
      <LineId Id="0" Count="40" />
      <LineId Id="51" Count="1" />
      <LineId Id="41" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="44" Count="4" />
    </LineIds>
  </POU>
</TcPlcObject>