<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_DecoupleAxis" Id="{2e8fd5f4-f61e-4c5b-a0b0-e83b4112a9ea}" SpecialFunc="None">
    <Declaration><![CDATA[(****************************************************************
NAME:			FB_DecoupleAxis
DATA:			2017.2.24
VERSION:		1.0.0
DESCRIPTION:	FB_DecoupleAxis
HISTORY:
				2017.2.16		NEW

***************************************************************)
FUNCTION_BLOCK FB_DecoupleAxis
VAR_INPUT
	Execute:BOOL;
	Reset:BOOL;
END_VAR
VAR_OUTPUT
	FbID:DINT:=1001;
	State:DINT;
	Busy:BOOL;
	OutGear:BOOL;
	Error:BOOL;
	ErrorID:DINT;
END_VAR
VAR
	Top_MC_GearOut: MC_GearOut;
	Bottom_MC_GearOut: MC_GearOut;
	fb_ton: TON;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Execute THEN
Busy:=TRUE;
fb_ton(PT:=t#0.1s);
CASE State OF
	0:	(*Decouple Check*)
		IF  LeftTopLin.NcToPlc.CoupleState=0 AND RightTopLin.NcToPlc.CoupleState=0
			AND LeftBottomLin.NcToPlc.CoupleState=0 AND RightBottomLin.NcToPlc.CoupleState=0 THEN	(*ÒÑ´¦ÓÚ·ÇñîºÏ£¬Ìø×ª88*)
			State:=88;
		ELSIF LeftTopLin.NcToPlc.CoupleState<>1 AND RightTopLin.NcToPlc.CoupleState<>3
			AND LeftBottomLin.NcToPlc.CoupleState<>1 AND RightBottomLin.NcToPlc.CoupleState<>3 THEN		(*´¦ÓÚ´íÎóµÄñîºÏ×´Ì¬£¬EStop*)
			ErrorID:=1;
			State:=-100;
		ELSIF Top_MC_GearOut.Error OR Bottom_MC_GearOut.Error THEN		(*FB ´íÎó*)
			ErrorID:=2;
			State:=99;
		ELSIF LeftTopLin.NcToPlc.CoupleState=1 AND RightTopLin.NcToPlc.CoupleState=3
			AND LeftBottomLin.NcToPlc.CoupleState=1 AND RightBottomLin.NcToPlc.CoupleState=3 THEN		(*Î¨Ò»ÕýÈ·µÄñîºÏ·½Ê½£¬×ªÏÂÒ»²½*)
			State:=1;
		END_IF
	1:	(*Decouple*)
		IF LeftTopLin.NcToPlc.CoupleState=1 AND RightTopLin.NcToPlc.CoupleState=3
			AND LeftBottomLin.NcToPlc.CoupleState=1 AND RightBottomLin.NcToPlc.CoupleState=3 THEN		(*ÔÙ´Î¼ì²éñîºÏ*)
			Top_MC_GearOut.Execute:=TRUE;
			Bottom_MC_GearOut.Execute:=TRUE;
			A_DecoupleMC();
			fb_ton.IN:=TRUE;
		ELSIF LeftTopLin.NcToPlc.CoupleState=0 AND RightTopLin.NcToPlc.CoupleState=0
			AND LeftBottomLin.NcToPlc.CoupleState=0 AND RightBottomLin.NcToPlc.CoupleState=0 THEN	(*ÒÑ´¦ÓÚ·ÇñîºÏ£¬Ìø×ª88*)
			State:=88;
		ELSE
			ErrorID:=3;
			State:=-100;
		END_IF
	2:	(*Decouple Wait*)
		A_DecoupleMC();
		IF NOT Top_MC_GearOut.Done OR NOT Bottom_MC_GearOut.Done THEN	(*ÓÐÒ»¸öGearOutÎ´Íê³É£¬¼ÌÐø¡£³¬Ê±Ôò±¨´í*)
			IF NOT fb_ton.Q THEN
				State:=2;
			ELSE
				ErrorID:=4;
				State:=99;
			END_IF
		ELSIF Top_MC_GearOut.Done AND Bottom_MC_GearOut.Done
			AND LeftTopLin.NcToPlc.CoupleState=0 AND RightTopLin.NcToPlc.CoupleState=0
			AND LeftBottomLin.NcToPlc.CoupleState=0 AND RightBottomLin.NcToPlc.CoupleState=0 THEN		(*Decouple DoneÇÒñîºÏ×´Ì¬ÕýÈ·£¬×ª88*)
			State:=88;
		ELSE
			ErrorID:=5;
			State:=-100;
		END_IF
	88:	(*Done*)
		Execute:=FALSE;
		State:=0;
		Busy:=FALSE;
		OutGear:=TRUE;
		Error:=FALSE;
		ErrorID:=0;
		Top_MC_GearOut.Execute:=FALSE;
		Bottom_MC_GearOut.Execute:=FALSE;
		A_DecoupleMC();
		fb_ton.IN:=FALSE;
	99:	(*FB Error*)
		Execute:=FALSE;
		State:=99;
		Busy:=FALSE;
		OutGear:=FALSE;
		Error:=TRUE;
		Top_MC_GearOut.Execute:=FALSE;
		Bottom_MC_GearOut.Execute:=FALSE;
		A_DecoupleMC();
		fb_ton.IN:=FALSE;
	-100:	(*EStop Error*)
		FB_PlcEmergencyStop();
		Execute:=FALSE;
		State:=-100;
		Busy:=FALSE;
		OutGear:=FALSE;
		Error:=TRUE;
		Top_MC_GearOut.Execute:=FALSE;
		Bottom_MC_GearOut.Execute:=FALSE;
		A_DecoupleMC();
		fb_ton.IN:=FALSE;

END_CASE
END_IF
IF Reset THEN
		Execute:=FALSE;
		State:=0;
		Busy:=FALSE;
		OutGear:=FALSE;
		Error:=FALSE;
		ErrorID:=0;
		Top_MC_GearOut.Execute:=FALSE;
		Bottom_MC_GearOut.Execute:=FALSE;
		A_DecoupleMC();
		fb_ton.IN:=FALSE;
		Reset:=FALSE;
END_IF]]></ST>
    </Implementation>
    <Action Name="A_DecoupleMC" Id="{464c74fe-3945-4d3f-abbc-f0c57fbc5f90}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="BoxType">"MC_GearOut"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"Top_MC_GearOut"</v>
                          <v n="Type">""</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">2L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">4L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">5L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">6L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">8L</v>
                            </o>
                            <v n="Id">7L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">10L</v>
                            </o>
                            <v n="Id">9L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"RightTopLin"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">12L</v>
                            </o>
                            <v n="Id">11L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Execute</v>
                            <v>Options</v>
                            <v>Slave</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>ST_GearOutOptions</v>
                            <v>AXIS_REF (VAR_IN_OUT)</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Done</v>
                            <v>Busy</v>
                            <v>Error</v>
                            <v>ErrorID</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>UDINT</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <n n="EN" />
                        <n n="ENO" />
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">3L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="BoxType">"MC_GearOut"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"Bottom_MC_GearOut"</v>
                          <v n="Type">""</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">14L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">16L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">17L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">18L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">20L</v>
                            </o>
                            <v n="Id">19L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">22L</v>
                            </o>
                            <v n="Id">21L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"RightBottomLin"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">24L</v>
                            </o>
                            <v n="Id">23L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Execute</v>
                            <v>Options</v>
                            <v>Slave</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>ST_GearOutOptions</v>
                            <v>AXIS_REF (VAR_IN_OUT)</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Done</v>
                            <v>Busy</v>
                            <v>Error</v>
                            <v>ErrorID</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>UDINT</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <n n="EN" />
                        <n n="ENO" />
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">15L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">13L</v>
                  </o>
                </l2>
                <v n="BranchCounter">1</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <LineIds Name="FB_DecoupleAxis">
      <LineId Id="27" Count="97" />
    </LineIds>
  </POU>
</TcPlcObject>